--- a/css/app.css
+++ b/css/app.css
@@ -41,7 +41,7 @@
 
 	#buguerMenu {
 		color: #ffffff;
-		font-size: 36px;
+		font-size: 32px;
 		padding: 16px;
 	}
 
@@ -102,6 +102,18 @@
 		color: #ffffff;
 		display: block;
 		transition: 0.3s;
+	}
+
+	#copy {
+		padding-top: 100px;
+		padding-left: 32px;
+		font-size: 12px;
+		color: #ffffff;
+	}
+
+	#social a {
+		display: inline;
+		font-size: 32px;
 	}
 
 	.sidenav a:hover, .offcanvas a:focus {
