--- a/css/app.css
+++ b/css/app.css
@@ -21,6 +21,11 @@
 	color: white;
 }
 
+#menu-container li a:hover {
+	color: #e0e0e0;
+}
+
+
 .hero {
   	background: url("../assets/hero-image.jpg");
   	height: 60vh;
@@ -55,24 +60,38 @@
 }
 
 
+/* Footer */
+
 #footer-container {
   background-color: #272822;
   margin-bottom: 0;
+  color:#fff;
 }
 
-#footer-container h5{
-  padding: 16px 15px 0 15px;
-  color: #fff;
+.social-f {
+	padding: 0 16px;
+	font-size: 32px;
+}
+
+#footer-container a {
+	color: #fff;
+}
+
+#footer-container h4{
+  font-weight: bold;
 }
 
 .footer {
-  padding-top: 16px;
+  padding: 8px 0 0 0;
   border-top: 1px solid #ccc;
 }
 
-.footer p {
-  font-size: 12px;
-  color: #fff;
+.footer .column {
+	padding: 0px;
+}
+
+.footer .column {
+	font-size: 12px;
 }
 
 #aviso-privacidad a{
@@ -80,6 +99,20 @@
   color: #fff;
   text-decoration: none;
 }
+
+#social-container {
+	padding-right: 26px;
+}
+
+@media screen and (max-width: 450px) {
+    	#footer-container h4, .footer {
+    		padding: 8px 15px;
+    	}
+	}
+
+
+
+
 
 	/* The side navigation menu */
 	.sidenav {
@@ -105,7 +138,7 @@
 	}
 
 	#copy {
-		padding-top: 100px;
+		padding-top: 120px;
 		padding-left: 32px;
 		font-size: 12px;
 		color: #ffffff;
@@ -117,7 +150,7 @@
 	}
 
 	.sidenav a:hover, .offcanvas a:focus {
-		color: #333;
+		color: #e0e0e0;
 	}
 
 	.sidenav .closebtn {
@@ -147,16 +180,29 @@
 	}
 
 	.section-title {
-		font-size: 4em;
+		font-size: 3.8em;
 		font-weight: bold;
-		padding: 16px 0;
+		padding: 16px 15px 8px 15px;
+	}
+
+	@media screen and (max-width: 450px) {
+    	.section-title {
+    		font-size: 2.7em;
+    	}
 	}
 
 	.section-subtitle {
 		font-size: 1.4em;
 		font-weight: 600;
 		color: #111;
-		padding: 8px 0;
+		padding-bottom: 8px;
+	}
+
+	@media screen and (max-width: 450px) {
+    	.section-subtitle {
+    		padding: 15px;
+    		font-size: 1.2em;
+    	}
 	}
 
 	#servicios-lista {
@@ -173,7 +219,7 @@
 	#ser-icon {
 		display: inline-block;
 		float: left;
-		padding: 16px 16px 32px 0;
+		padding: 8px 16px 40px 0;
 		margin: 0 16px 0 0;
 	}
 
@@ -205,12 +251,13 @@
 		max-width: 100%;
 
 	}
-
+	
 	@media screen and (max-width: 450px) {
     	.product-image {
-		max-width: 160px;
+		max-width: 100%;
 		}
 	}
+
 	
 
 	#ubicaciones-container {
