--- a/css/app.css
+++ b/css/app.css
@@ -33,12 +33,20 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	position: relative;  
+	 background-attachment: fixed;
 }
 
 #hero-text {
 		font-weight: bold;
 		font-size: 4rem;
 	}
+
+@media screen and (max-width: 450px) {
+    	#hero-text {
+    		font-size: 3rem;
+    	}
+	}
+
 
 	#mobileNavBar {
 		background: #DF0424;
@@ -58,6 +66,7 @@
 	transform: translate(-50%, -50%);
 	color: white;
 }
+
 
 
 /* Footer */
