--- a/css/app.css
+++ b/css/app.css
@@ -2,21 +2,71 @@
 	border: 0px;
 }
 
-#container {
-
+/* The side navigation menu */
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 6;
+  top: 0;
+  left: 0;
+  background-color: rgb(255, 0, 0);opacity:0.9;
+  overflow-x: hidden;
+  padding-top: 60px;
+  transition: 0.5s;
+}
+  
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
+  color: #ffffff;
+  display: block;
+  transition: 0.3s;
 }
 
-
-#logo-container {
-
+#copy {
+  padding-top: 120px;
+  padding-left: 32px;
+  font-size: 12px;
+  color: #ffffff;
 }
 
+#social a {
+  display: inline;
+  font-size: 32px;
+}
+
+.sidenav a:hover, .offcanvas a:focus {
+  color: #e0e0e0;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+#main {
+  transition: margin-left .3s;
+  padding: 20px;
+}
+/* The side navigation menu */
+
+
+/* Logo */
 .logo {
 	width: 128px;
 	height: 100%;
 	padding: 16px 0;
 }
+/* Logo */
 
+
+/* Menu */
 #menu-container {
 	background-color: rgb(255, 0, 0);opacity:0.9;
 }
@@ -30,9 +80,18 @@
 	color: #e0e0e0;
 }
 
+#buguerMenu {
+  color: #ffffff;
+  font-size: 32px;
+  padding: 16px;
+}
+/* Menu */
+
+
+/* Hero */
 .hero {
-  	background: url("../assets/hero-image.jpg");
-  	height: 60vh;
+  background: url("../assets/hero-image.jpg");
+  height: 60vh;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -40,40 +99,112 @@
 	background-attachment: fixed;
 }
 
-#hero-text {
-		font-weight: bold;
-		font-size: 4rem;
-	}
-
-@media screen and (max-width: 450px) {
-    	#hero-text {
-    		font-size: 3rem;
-    	}
-	}
-
-	#buguerMenu {
-		color: #ffffff;
-		font-size: 32px;
-		padding: 16px;
-	}
-
-@media screen and (max-width: 450px) {
-    	#menu-container {
-    		background-color: rgb(255, 0, 0);opacity:0.9;
-    	}
-	}
-
 .hero-text {
-	text-align: center;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	color: white;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
 
-/* Footer */
+#hero-text {
+	font-weight: bold;
+	font-size: 4rem;
+}
+/* Hero */
 
+
+/* Servicios */
+#servicios-container {
+	padding-bottom: 16px;
+}
+
+.section-title {
+	font-size: 3.8em;
+	font-weight: bold;
+	padding: 16px 15px 8px 15px;
+}
+
+.section-subtitle {
+	font-size: 1.4em;
+	font-weight: 600;
+	color: #111;
+	padding-bottom: 8px;
+}
+
+#servicios-lista {
+	list-style: none !important;
+}
+
+#servicios-container li {
+	font-size: 1.3em;
+	font-weight: 300;
+	color: #333;
+	padding: 0px 8px;
+}
+
+#ser-icon {
+	display: inline-block;
+	float: left;
+	padding: 8px 16px 40px 0;
+	margin: 0 16px 0 0;
+}
+
+.servicio {
+	padding: 16px 16px 24px 0;
+	display: block;
+}
+
+#machine {
+  height: 100%;
+  width: 260px;
+}
+
+.product-container {
+  margin-bottom: 16px;
+}
+
+.product {
+	font-size: 1.2em;
+	font-weight: 500;
+	text-align: center;
+	color: #333;
+	padding: 8px 0;
+}
+
+.product-image {
+	max-width: 100%;
+}
+/* Servicios */
+
+
+/* Ubicaciones */
+#ubicaciones-container {
+	background-color: #f3f3f3;
+}
+
+#locaciones {
+	text-align: center;
+	margin-bottom: 8px;
+}
+
+.location {
+	color: #333;
+	padding: 16px 16px;
+}
+
+.location:hover {
+	color: #007DF7;
+}
+
+#contact-button {
+	font-weight: bold;
+}
+/* Ubicaciones */
+
+
+/* Footer */
 #footer-container {
   background-color: #272822;
   margin-bottom: 0;
@@ -81,15 +212,15 @@
 }
 
 .social-f {
-	padding: 0 16px;
-	font-size: 32px;
+  padding: 0 16px;
+  font-size: 32px;
 }
 
 #footer-container a {
-	color: #fff;
+  color: #fff;
 }
 
-#footer-container h4{
+#footer-container h4 {
   font-weight: bold;
 }
 
@@ -99,198 +230,74 @@
 }
 
 .footer .column {
-	padding: 0px;
+  padding: 0px;
 }
 
 .footer .column {
-	font-size: 12px;
+  font-size: 12px;
 }
 
-#aviso-privacidad a{
+#aviso-privacidad a {
   float: right;
   color: #fff;
   text-decoration: none;
 }
 
 #social-container {
-	padding-right: 26px;
+  padding-right: 26px;
 }
+/* Footer */
+
 
 @media screen and (max-width: 450px) {
-    	#footer-container h4, .footer {
-    		padding: 8px 15px;
-    	}
-	}
+  #hero-text {
+    font-size: 3rem;
+  }
 
+  .hero {
+    background: url("../assets/hero-image.jpg");
+    height: 60vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;  
+    background-attachment: fixed;
+  }
 
+  #menu-container {
+    background-color: rgb(255, 0, 0);opacity:0.9;
+  }
 
+  #footer-container h4, .footer {
+    padding: 8px 15px;
+  }
 
+  .sidenav {
+    padding-top: 15px;
+  }
+    
+  .sidenav a {
+    font-size: 18px;
+  }
 
-	/* The side navigation menu */
-	.sidenav {
-		height: 100%;
-		width: 0;
-		position: fixed;
-		z-index: 6;
-		top: 0;
-		left: 0;
-		background-color: rgb(255, 0, 0);opacity:0.9;
-		overflow-x: hidden;
-		padding-top: 60px;
-		transition: 0.5s;
-	}
-	
-	.sidenav a {
-		padding: 8px 8px 8px 32px;
-		text-decoration: none;
-		font-size: 20px;
-		color: #ffffff;
-		display: block;
-		transition: 0.3s;
-	}
+  .section-title {
+    font-size: 2.7em;
+  }
 
-	#copy {
-		padding-top: 120px;
-		padding-left: 32px;
-		font-size: 12px;
-		color: #ffffff;
-	}
+  .section-subtitle {
+    padding: 15px;
+    font-size: 1.2em;
+  }
 
-	#social a {
-		display: inline;
-		font-size: 32px;
-	}
-
-	.sidenav a:hover, .offcanvas a:focus {
-		color: #e0e0e0;
-	}
-
-	.sidenav .closebtn {
-		position: absolute;
-		top: 0;
-		right: 25px;
-		font-size: 36px;
-		margin-left: 50px;
-	}
-
-	#main {
-		transition: margin-left .3s;
-		padding: 20px;
-	}
-
-	@media screen and (max-height: 450px) {
-    	.sidenav {padding-top: 15px;}
-    	.sidenav a {font-size: 18px;}
-	}
-
-	/* */
-
-	/* Servicios */
-
-	#servicios-container{
-		padding-bottom: 16px;
-	}
-
-	.section-title {
-		font-size: 3.8em;
-		font-weight: bold;
-		padding: 16px 15px 8px 15px;
-	}
-
-	@media screen and (max-width: 450px) {
-    	.section-title {
-    		font-size: 2.7em;
-    	}
-	}
-
-	.section-subtitle {
-		font-size: 1.4em;
-		font-weight: 600;
-		color: #111;
-		padding-bottom: 8px;
-	}
-
-	@media screen and (max-width: 450px) {
-    	.section-subtitle {
-    		padding: 15px;
-    		font-size: 1.2em;
-    	}
-	}
-
-	#servicios-lista {
-		list-style: none !important;
-	}
-
-	#servicios-container li {
-		font-size: 1.3em;
-		font-weight: 300;
-		color: #333;
-		padding: 0px 8px;
-	}
-
-	#ser-icon {
-		display: inline-block;
-		float: left;
-		padding: 8px 16px 40px 0;
-		margin: 0 16px 0 0;
-	}
-
-	.servicio {
-		padding: 16px 16px 24px 0;
-		display: block;
-	}
-
-	#machine {
-    		height: 100%;
-    		width: 260px;
-    	}
-
-    /* */
-
-    .product-container {
-    	margin-bottom: 16px;
-    }
-
-	.product {
-		font-size: 1.2em;
-		font-weight: 500;
-		text-align: center;
-		color: #333;
-		padding: 8px 0;
-	}
-
-	.product-image {
+  .product-image {
 		max-width: 100%;
+	}
+}
 
-	}
-	
-	@media screen and (max-width: 450px) {
-    	.product-image {
-		max-width: 100%;
-		}
-	}
-
-	#ubicaciones-container {
-		background-color: #f3f3f3;
-	}
-	
-	#locaciones {
-		text-align: center;
-		margin-bottom: 8px;
-	}
-
-	.location {
-		color: #333;
-		padding: 16px 16px;
-	}
-
-	.location:hover {
-		color: #007DF7;
-	}
-
-	#contact-button {
-		font-weight: bold;
-	}
-
+@media screen and (min-width: 450px) {
+  #footer-container h4, .footer {
+    padding: 8px 15px;
+  }
+}
 
 	
