--- a/css/app.css
+++ b/css/app.css
@@ -96,7 +96,7 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	position: relative;  
-	/*background-attachment: fixed;*/
+	background-attachment: fixed;
 }
 
 .hero-text {
@@ -254,16 +254,6 @@
     font-size: 3rem;
   }
 
-  .hero {
-    background: url("../assets/hero-image.jpg");
-    height: 60vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;  
-    background-attachment: fixed;
-  }
-
   #menu-container {
     background-color: rgb(255, 0, 0);opacity:0.9;
   }
@@ -300,4 +290,9 @@
   }
 }
 
+@media screen and (-webkit-min-device-pixel-ratio: 2) {
+  .hero {
+    background: url("../assets/hero-image2x.jpg");
+  }
+}
 	
