--- a/css/app.css
+++ b/css/app.css
@@ -290,12 +290,11 @@
   }
 }
 
-@media screen and (-webkit-min-device-pixel-ratio: 2) {
-  body {
+
+@media (-webkit-min-device-pixel-ratio: 2) { body {
     border: 10px solid red;
   }
   .hero {
-    background-image: url("../assets/hero-image2x.jpg");
+    background-image: url("../assets/hero-image.jpg");
   }
-}
-	
+   }
