--- a/css/app.css
+++ b/css/app.css
@@ -295,6 +295,6 @@
     border: 10px solid red;
   }
   .hero {
-    background-image: url("../assets/hero-image.jpg");
+    background-image: url("../assets/hero-image2x.jpg");
   }
    }
