--- a/css/app.css
+++ b/css/app.css
@@ -92,9 +92,10 @@
 #hero {
   background-image: url("../assets/hero-image.jpg");
   height: 400px;
-	
+	background-position: center;
+  background-repeat: no-repeat;
 	background-size: cover;
-	
+  position: relative;	
 }
 
 .hero-text {
@@ -289,9 +290,8 @@
 }
 
 
-@media (-webkit-min-device-pixel-ratio: 2) { body {
-    border: 10px solid red;
-  }
+@media (-webkit-min-device-pixel-ratio: 2) { 
+  
   #hero {
     background-image: url("../assets/hero-image2x.jpg");
   }
