--- a/css/app.css
+++ b/css/app.css
@@ -92,10 +92,10 @@
 #hero {
   background-image: url("../assets/hero-image.jpg");
   height: 400px;
-	background-position: center;
+	background-attachment: fixed;
+  background-position: center;
   background-repeat: no-repeat;
 	background-size: cover;
-  position: relative;	
 }
 
 .hero-text {
