--- a/css/app.css
+++ b/css/app.css
@@ -91,7 +91,7 @@
 /* Hero */
 #hero {
   background-image: url("../assets/hero-image.jpg");
-  height: 400px;
+  height: 60vh;
 	background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
