--- a/css/app.css
+++ b/css/app.css
@@ -68,16 +68,18 @@
 
 /* Menu */
 #menu-container {
-	background-color: rgb(255, 0, 0);opacity:0.9;
+	background-color: #272822;
+  opacity:0.9;
 }
 
 #menu-container li a {
 	font-weight: bold;
 	color: white;
+  opacity:0.8;
 }
 
 #menu-container li a:hover {
-	color: #FFFFFF;
+	opacity:1;
 }
 
 #buguerMenu {
@@ -90,7 +92,7 @@
 
 /* Hero */
 #hero {
-  background-image: url("../assets/hero-image.jpg");
+  background: url("../assets/hero-image.jpg") 80% no-repeat;
   height: 60vh;
 	background-attachment: fixed;
   background-position: center;
@@ -137,22 +139,27 @@
 }
 
 #servicios-container li {
-	font-size: 1.3em;
+	font-size: 1.2em;
 	font-weight: 300;
 	color: #333;
-	padding: 0px 8px;
+	padding: 16px 8px;
 }
 
 #ser-icon {
 	display: inline-block;
 	float: left;
-	padding: 8px 16px 40px 0;
+	padding: 8px 16px 16px 0;
 	margin: 0 16px 0 0;
 }
 
 .servicio {
-	padding: 16px 16px 24px 0;
+	/*padding: 16px 16px 24px 0;*/
 	display: block;
+}
+
+.servicio li {
+  
+
 }
 
 #machine {
@@ -223,6 +230,12 @@
   font-weight: bold;
 }
 
+.footer-contact {
+  font-size: 14px;
+  padding-top: 16px;
+  border-top: 1px solid #ccc;
+}
+
 .footer {
   padding: 8px 0 0 0;
   border-top: 1px solid #ccc;
@@ -263,7 +276,7 @@
   }
 
   #menu-container {
-    background-color: rgb(255, 0, 0);opacity:0.9;
+    background-color: #272822;opacity:0.9;
   }
 
   #footer-container h4, .footer {
@@ -298,7 +311,6 @@
     padding: 8px 15px;
   }
 }
-
 
 @media (-webkit-min-device-pixel-ratio: 2) { 
   #hero {
