--- a/css/app.css
+++ b/css/app.css
@@ -204,10 +204,16 @@
 	color: #007DF7;
 }
 
+.error {
+  display: none;
+  color: red;
+}
+
 #contact-button {
 	font-weight: bold;
 }
 /* Ubicaciones */
+
 
 
 /* Footer */
